[tool.poetry]
name = "personal-assistant"
version = "1.0.0"
description = "Personal assistant that manages your phone contact list"
authors = ["polina-py <polina.bnp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
